Copy xdebug config file.
Xdebug config for remote debugging.

--- a/php-fpm/Dockerfile
+++ b/php-fpm/Dockerfile
@@ -37,6 +37,8 @@ RUN sed -i "s/;date.timezone =.*/date.timezone = UTC/" /etc/php5/fpm/php.ini && 
     sed -i '/^;catch_workers_output/ccatch_workers_output = yes' /etc/php5/fpm/pool.d/www.conf
     #sed -i '/^;env\[TEMP\] = .*/aenv[DB_PORT_3306_TCP_ADDR] = $DB_PORT_3306_TCP_ADDR' /etc/php5/fpm/pool.d/www.conf
 
+ADD 30-xdebug.ini /etc/php5/fpm/conf.d/
+
 # TODO: add data volumes 
 
 EXPOSE 9000
